// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RunDataPanel/> custom display props 1`] = `
<div
  className="panel panel-default full-width"
>
  <div
    className="panel-heading"
  >
    Results
  </div>
  <div
    className="panel-body"
  >
    <div
      className="row"
    >
      <div
        className="col-sm-12"
      >
        <ul
          className="list-group clearfix"
          style={
            Object {
              "listStyle": "none",
            }
          }
        >
          <li
            className="list-group-item form-step-tab active"
            onClick={[Function]}
          >
            Upload Files
          </li>
          <li
            className="list-group-item form-step-tab"
            onClick={[Function]}
          >
            Copy-and-Paste Data
          </li>
          <li
            className="list-group-item form-step-tab"
            onClick={[Function]}
          >
            Enter Data Into Grid
          </li>
        </ul>
        <div
          className="clearfix"
        />
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-sm-12"
      >
        <div
          className="form-step active"
        >
          <span
            className="translator--toggle__wizard"
          >
            <div
              className="row"
            >
              <div
                className="col-sm-12"
              >
                <div
                  className="wizard-row--container"
                >
                  <div
                    className=""
                  >
                    <div
                      className="file-upload--container block"
                    >
                      <label
                        className="file-upload--label"
                        htmlFor="fileUpload"
                        onDragEnter={[Function]}
                        onDragLeave={[Function]}
                        onDragOver={[Function]}
                        onDrop={[Function]}
                      >
                        <i
                          aria-hidden="true"
                          className="fa fa-cloud-upload fa-2x cloud-logo"
                        />
                        Select file or drag and drop here.
                      </label>
                      <input
                        accept=""
                        className="file-upload--input"
                        id="fileUpload"
                        multiple={false}
                        name="fileUpload"
                        onChange={[Function]}
                        type="file"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </span>
          <div
            className="row"
          >
            <div
              className="col-md-9"
            >
              
            </div>
            <div
              className="col-md-3"
            >
              <div
                className="pull-right"
              >
                <a
                  className="btn btn-info"
                  href="/labkey/Sample%20Management%202/assay-template.view?rowId=5051"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  title="Download Template"
                >
                  <span
                    className="fa fa-download"
                  />
                   Template
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          className="form-step"
        >
          <form
            disabled={false}
            onError={[Function]}
            onReset={[Function]}
            onSubmit={[Function]}
          >
            <div
              className="form-group row"
            >
              <label
                className="control-label hidden"
                data-required={false}
                htmlFor="frc-rundata-1088"
              >
                
              </label>
              <div
                className="col-sm-12"
              >
                <textarea
                  className="form-control"
                  cols={-1}
                  disabled={false}
                  id="frc-rundata-1088"
                  name="rundata"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Paste in a tab-separated set of values (including column headers)."
                  required={false}
                  rows={10}
                  value=""
                />
              </div>
            </div>
            <button
              className="btn btn-default"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Clear
            </button>
          </form>
        </div>
        <div
          className="form-step"
        >
          <div>
            <div
              className="row QueryGrid-bottom-spacing"
            >
              <div
                className="col-sm-3"
              >
                <div
                  className="editable-grid__controls text-nowrap"
                >
                  <span
                    className="input-group input-group-align"
                  >
                    <input
                      className="form-control"
                      disabled={false}
                      max={1000}
                      min={1}
                      name="addCount"
                      onBlur={[Function]}
                      onChange={[Function]}
                      style={
                        Object {
                          "width": "65px",
                        }
                      }
                      type="number"
                      value="1"
                    />
                    <span
                      className="input-group-btn"
                    >
                      <button
                        className="btn btn-primary"
                        disabled={false}
                        onClick={[Function]}
                        type="button"
                      >
                        Add row
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <div
                className="col-sm-9"
              >
                <span
                  className="control-right"
                >
                  <button
                    className="control-right btn btn-default"
                    disabled={true}
                    onClick={[Function]}
                    type="button"
                  >
                    Delete Rows
                  </button>
                </span>
              </div>
            </div>
            <div
              className="editable-grid__container"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <div
                className=""
              >
                <div
                  className="grid-messages"
                />
                <table
                  className="table-cellular table-striped table-bordered"
                >
                  <thead>
                    <tr>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": undefined,
                          }
                        }
                      >
                        <input
                          checked={false}
                          disabled={false}
                          onChange={[Function]}
                          type="checkbox"
                        />
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "45px",
                          }
                        }
                      >
                        Row
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "100px",
                          }
                        }
                      >
                        Specimen ID
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "100px",
                          }
                        }
                      >
                        Participant ID
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "100px",
                          }
                        }
                      >
                        Visit ID
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "100px",
                          }
                        }
                      >
                        Date
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "100px",
                          }
                        }
                      >
                        Healthy
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "100px",
                          }
                        }
                      >
                        File
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "100px",
                          }
                        }
                      >
                        Text Area
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr
                      className="grid-empty"
                    >
                      <td
                        colSpan={9}
                      >
                        Start by adding the quantity of assay data rows you want to create.
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="top-spacing"
    />
  </div>
</div>
`;

exports[`<RunDataPanel/> default props 1`] = `
<div
  className="panel panel-default full-width"
>
  <div
    className="panel-heading"
  >
    Results
  </div>
  <div
    className="panel-body"
  >
    <div
      className="row"
    >
      <div
        className="col-sm-12"
      >
        <ul
          className="list-group clearfix"
          style={
            Object {
              "listStyle": "none",
            }
          }
        >
          <li
            className="list-group-item form-step-tab active"
            onClick={[Function]}
          >
            Upload Files
          </li>
          <li
            className="list-group-item form-step-tab"
            onClick={[Function]}
          >
            Copy-and-Paste Data
          </li>
          <li
            className="list-group-item form-step-tab"
            onClick={[Function]}
          >
            Enter Data Into Grid
          </li>
        </ul>
        <div
          className="clearfix"
        />
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-sm-12"
      >
        <div
          className="form-step active"
        >
          <span
            className="translator--toggle__wizard"
          >
            <div
              className="row"
            >
              <div
                className="col-sm-12"
              >
                <div
                  className="wizard-row--container"
                >
                  <div
                    className=""
                  >
                    <div
                      className="file-upload--container block"
                    >
                      <label
                        className="file-upload--label"
                        htmlFor="fileUpload"
                        onDragEnter={[Function]}
                        onDragLeave={[Function]}
                        onDragOver={[Function]}
                        onDrop={[Function]}
                      >
                        <i
                          aria-hidden="true"
                          className="fa fa-cloud-upload fa-2x cloud-logo"
                        />
                        Select file or drag and drop here.
                      </label>
                      <input
                        accept=""
                        className="file-upload--input"
                        id="fileUpload"
                        multiple={false}
                        name="fileUpload"
                        onChange={[Function]}
                        type="file"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </span>
          <div
            className="row"
          >
            <div
              className="col-md-9"
            >
              
            </div>
            <div
              className="col-md-3"
            >
              <div
                className="pull-right"
              >
                <a
                  className="btn btn-info"
                  href="/labkey/Sample%20Management%202/assay-template.view?rowId=5051"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  title="Download Template"
                >
                  <span
                    className="fa fa-download"
                  />
                   Template
                </a>
              </div>
            </div>
          </div>
        </div>
        <div
          className="form-step"
        >
          <form
            disabled={false}
            onError={[Function]}
            onReset={[Function]}
            onSubmit={[Function]}
          >
            <div
              className="form-group row"
            >
              <label
                className="control-label hidden"
                data-required={false}
                htmlFor="frc-rundata-1088"
              >
                
              </label>
              <div
                className="col-sm-12"
              >
                <textarea
                  className="form-control"
                  cols={-1}
                  disabled={false}
                  id="frc-rundata-1088"
                  name="rundata"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  placeholder="Paste in a tab-separated set of values (including column headers)."
                  required={false}
                  rows={10}
                  value=""
                />
              </div>
            </div>
            <button
              className="btn btn-default"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Clear
            </button>
          </form>
        </div>
        <div
          className="form-step"
        >
          <div>
            <div
              className="row QueryGrid-bottom-spacing"
            >
              <div
                className="col-sm-3"
              >
                <div
                  className="editable-grid__controls text-nowrap"
                >
                  <span
                    className="input-group input-group-align"
                  >
                    <input
                      className="form-control"
                      disabled={false}
                      max={1000}
                      min={1}
                      name="addCount"
                      onBlur={[Function]}
                      onChange={[Function]}
                      style={
                        Object {
                          "width": "65px",
                        }
                      }
                      type="number"
                      value="1"
                    />
                    <span
                      className="input-group-btn"
                    >
                      <button
                        className="btn btn-primary"
                        disabled={false}
                        onClick={[Function]}
                        type="button"
                      >
                        Add row
                      </button>
                    </span>
                  </span>
                </div>
              </div>
              <div
                className="col-sm-9"
              />
            </div>
            <div
              className="editable-grid__container"
              onKeyDown={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
            >
              <div
                className=""
              >
                <div
                  className="grid-messages"
                />
                <table
                  className="table-cellular table-striped table-bordered"
                >
                  <thead>
                    <tr>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "45px",
                          }
                        }
                      >
                        Row
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "100px",
                          }
                        }
                      >
                        Specimen ID
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "100px",
                          }
                        }
                      >
                        Participant ID
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "100px",
                          }
                        }
                      >
                        Visit ID
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "100px",
                          }
                        }
                      >
                        Date
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "100px",
                          }
                        }
                      >
                        Healthy
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "100px",
                          }
                        }
                      >
                        File
                      </th>
                      <th
                        className="grid-header-cell"
                        onClick={[Function]}
                        style={
                          Object {
                            "minWidth": "100px",
                          }
                        }
                      >
                        Text Area
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr
                      className="grid-empty"
                    >
                      <td
                        colSpan={8}
                      >
                        Start by adding the quantity of assay data rows you want to create.
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="top-spacing"
    />
  </div>
</div>
`;

exports[`<RunDataPanel/> loading state based on gridModel 1`] = `
<div
  className="panel panel-default full-width"
>
  <div
    className="panel-heading"
  >
    Results
  </div>
  <div
    className="panel-body"
  >
    <span
      className=""
    >
      <i
        aria-hidden="true"
        className="fa fa-spinner fa-pulse"
      />
       
      Loading...
    </span>
  </div>
</div>
`;
